--- a/docs/pages/access-controls/guides/role-templates.mdx
+++ b/docs/pages/access-controls/guides/role-templates.mdx
@@ -29,7 +29,7 @@ tctl status
 
 # Output
 Cluster  acme.example.com
-Version  6.0.2
+Version  (=teleport.version=)
 Host CA  never updated
 User CA  never updated
 Jwt CA   never updated
@@ -143,7 +143,7 @@ spec:
 Update both user's entries with `tctl create -f` command:
 
 ```bash
-tctl create -f traits.yaml 
+tctl create -f traits.yaml
 # user "alice" has been updated
 ```
 
@@ -151,7 +151,7 @@ Once Alice logs in, she will receive SSH and X.509 certificates with
 a new role and SSH logins and Kubernetes groups set:
 
 ```bash
-tsh login --proxy=teleport.example.com:443 --user=alice
+tsh login --proxy=teleport.example.com --user=alice
 
 # Output
 > Profile URL:        https://teleport.example.com:443
@@ -236,7 +236,7 @@ Once Bob logs in using SSO, he will receive SSH and X.509 certificates with
 a new role and SSH logins generated using `sso-users` role template:
 
 ```bash
-tsh login --proxy=teleport.example.com:443 --auth=github
+tsh login --proxy=teleport.example.com --auth=github
 
 > Profile URL:        https://teleport.example.com:443
   Logged in as:       bob
@@ -290,7 +290,7 @@ spec:
     database_users: ['{{email.local(external.email)}}']
     database_labels:
       'env': '{{regexp.replace(external.access["env"], "^(staging)$", "$1")}}'
-    
+
     # Labels can mix template and hard-coded values.
     node_labels:
       'env': '{{external.access["env"]}}'
