Removed 443/3080 port from tsh login examples

--- a/docs/pages/access-controls/guides/dual-authz.mdx
+++ b/docs/pages/access-controls/guides/dual-authz.mdx
@@ -50,7 +50,7 @@ tctl status
 
 # Output
 Cluster  acme.example.com
-Version  6.0.2
+Version  (=teleport.version=)
 Host CA  never updated
 User CA  never updated
 Jwt CA   never updated
@@ -244,14 +244,14 @@ Alice and Ivan can review and approve request using Web UI or CLI:
   <TabItem label="Web UI">
     ![Teleport-Approve](../../../img/access-controls/dual-authz/teleport-6-ivan-approve.png)
   </TabItem>
-  
+
   <TabItem label="CLI">
     ```bash
     tsh request list
-  
+
     # Output
     ID                                   User             Roles   Created (UTC)       Status
-    ------------------------------------ ---------------  ------- ------------------- ------- 
+    ------------------------------------ ---------------  ------- ------------------- -------
     9c721e54-b049-4ef8-a7f6-c777aa066764 bob@example.com  dbadmin 03 Apr 21 03:58 UTC PENDING
 
     tsh request review --approve --reason="hello" 9c721e54-b049-4ef8-a7f6-c777aa066764
