--- a/docs/pages/database-access/guides/mongodb-self-hosted.mdx
+++ b/docs/pages/database-access/guides/mongodb-self-hosted.mdx
@@ -193,7 +193,7 @@ in MongoDB documentation for more details.
 Log into your Teleport cluster and see available databases:
 
 ```bash
-tsh login --proxy=teleport.example.com:3080 --user=alice
+tsh login --proxy=teleport.example.com --user=alice
 tsh db ls
 Name          Description     Labels
 ------------- --------------- --------
