--- a/docs/pages/server-access/getting-started.mdx
+++ b/docs/pages/server-access/getting-started.mdx
@@ -68,9 +68,9 @@ This guide introduces some of these common scenarios and how to interact with Te
 
    <Tabs>
      <TabItem label="Amazon Linux 2/RHEL (RPM)">
-      ```bash
-      sudo yum-config-manager --add-repo https://rpm.releases.teleport.dev/teleport.repo
-      sudo yum install teleport
+      ```code
+      $ sudo yum-config-manager --add-repo https://rpm.releases.teleport.dev/teleport.repo
+      $ sudo yum install teleport
 
       # Optional:  Using DNF on newer distributions
       # $ sudo dnf config-manager --add-repo https://rpm.releases.teleport.dev/teleport.repo
@@ -79,38 +79,38 @@ This guide introduces some of these common scenarios and how to interact with Te
      </TabItem>
 
      <TabItem label="Debian/Ubuntu (DEB)">
-      ```bash
-      curl https://deb.releases.teleport.dev/teleport-pubkey.asc | sudo apt-key add -
-      sudo add-apt-repository 'deb https://deb.releases.teleport.dev/ stable main'
-      sudo apt-get update
-      sudo apt-get install teleport
+      ```code
+      $ curl https://deb.releases.teleport.dev/teleport-pubkey.asc | sudo apt-key add -
+      $ sudo add-apt-repository 'deb https://deb.releases.teleport.dev/ stable main'
+      $ sudo apt-get update
+      $ sudo apt-get install teleport
       ```
      </TabItem>
 
      <TabItem label="Linux">
-      ```bash
-      curl -O https://get.gravitational.com/teleport-v(=teleport.version=)-linux-amd64-bin.tar.gz
-      tar -xzf teleport-v(=teleport.version=)-linux-amd64-bin.tar.gz
-      cd teleport
-      sudo ./install
+      ```code
+      $ curl -O https://get.gravitational.com/teleport-v(=teleport.version=)-linux-amd64-bin.tar.gz
+      $ tar -xzf teleport-v(=teleport.version=)-linux-amd64-bin.tar.gz
+      $ cd teleport
+      $ sudo ./install
       ```
      </TabItem>
 
      <TabItem label="ARMv7 (32-bit)">
-      ```bash
-      curl -O https://get.gravitational.com/teleport-v(=teleport.version=)-linux-arm-bin.tar.gz
-      tar -xzf teleport-v(=teleport.version=)-linux-arm-bin.tar.gz
-      cd teleport
-      sudo ./install
+      ```code
+      $ curl -O https://get.gravitational.com/teleport-v(=teleport.version=)-linux-arm-bin.tar.gz
+      $ tar -xzf teleport-v(=teleport.version=)-linux-arm-bin.tar.gz
+      $ cd teleport
+      $ sudo ./install
       ```
      </TabItem>
 
      <TabItem label="ARMv8 (64-bit)">
-      ```bash
-      curl -O https://get.gravitational.com/teleport-v(=teleport.version=)-linux-arm64-bin.tar.gz
-      tar -xzf teleport-v(=teleport.version=)-linux-arm64-bin.tar.gz
-      cd teleport
-      sudo ./install
+      ```code
+      $ curl -O https://get.gravitational.com/teleport-v(=teleport.version=)-linux-arm64-bin.tar.gz
+      $ tar -xzf teleport-v(=teleport.version=)-linux-arm64-bin.tar.gz
+      $ cd teleport
+      $ sudo ./install
       ```
      </TabItem>
    </Tabs>
@@ -119,9 +119,9 @@ This guide introduces some of these common scenarios and how to interact with Te
 
    Teleport will now automatically acquire an X.509 certificate using the ACME protocol.
 
-   ```bash
+   ```code
    # Configure Teleport with TLS certs
-   sudo teleport configure \
+   $ sudo teleport configure \
      --acme --acme-email=your_email@example.com \
      --cluster-name=tele.example.com \
      -o file
@@ -131,9 +131,9 @@ This guide introduces some of these common scenarios and how to interact with Te
 
 4. Launch your *Bastion Host* by running:
 
-   ```bash
+   ```code
    # Launch Teleport
-   sudo teleport start
+   $ sudo teleport start
    ```
 
    Next, we'll create a *join token* to add and start the second Node.
@@ -142,9 +142,9 @@ This guide introduces some of these common scenarios and how to interact with Te
 
 1. Create a *join token* to add the second Node to the `tele.example.com` cluster. In a *Bastion Host* terminal run the following command:
 
-   ```bash
+   ```code
    # Let's save the token to a file
-   sudo tctl tokens add --type=node | grep -oP '(?<=token:\s).*' > token.file
+   $ sudo tctl tokens add --type=node | grep -oP '(?<=token:\s).*' > token.file
    ```
 
    Each Teleport Node can be configured into SSH mode (Teleport Node) and run as an enhanced SSH server. "Node" mode specifies that the Teleport Node will act and join as an SSH server.
@@ -159,9 +159,9 @@ This guide introduces some of these common scenarios and how to interact with Te
 
    - Save `token.file` to an appropriate, secure, directory you have the rights and access to read on the second instance.
 
-   ```bash
+   ```code
    # Join cluster
-   sudo teleport start \
+   $ sudo teleport start \
      --roles=node \
      --token=/path/to/token.file \
      --auth-server=tele.example.com:443
@@ -172,9 +172,8 @@ This guide introduces some of these common scenarios and how to interact with Te
 
 3. Create a user to access the `tele.example.com` Web UI through the following command:
 
-   ```bash
-   # Add a user
-   sudo tctl users add tele-admin --roles=editor,access --logins=root,ubuntu,ec2-user
+   ```code
+   $ sudo tctl users add tele-admin --roles=editor,access --logins=root,ubuntu,ec2-user
    ```
 
    This will generate an initial login link where you can set a password and set up Two-Factor Authentication for `tele-admin`.
@@ -201,16 +200,16 @@ We can use `tsh` to SSH into the cluster:
 
 1. On your local machine, log in through `tsh`:
 
-   ```bash
+   ```code
    # Log in through tsh
-   tsh login --proxy=tele.example.com --user=tele-admin
+   $ tsh login --proxy=tele.example.com --user=tele-admin
    ```
 
    You'll be prompted to supply the password and One Time Passcode we set up previously.
 
 2. `tele-admin` will now see:
 
-   ```bash
+   ```txt
    Profile URL:        https://tele.example.com:443
      Logged in as:       tele-admin
      Cluster:            tele.example.com
@@ -225,25 +224,25 @@ We can use `tsh` to SSH into the cluster:
 
 3. `tele-admin` can now execute the following to find the cluster's `nodenames`. `nodenames` are used for establishing SSH connections:
 
-   ```bash
+   ```code
    # Display cluster resources
-   tsh ls
+   $ tsh ls
    ```
 
    The *Bastion Host* Node is located on the bottom line below:
 
-   ```bash
-   Node Name        Address        Labels
-   ---------------- -------------- --------------------------------------
-   ip-172-31-35-170 ⟵ Tunnel
-   ip-172-31-41-144 127.0.0.1:3022 env=example, hostname=ip-172-31-41-144
+   ```txt
+   Node Name        Address        Labels                                 
+   ---------------- -------------- -------------------------------------- 
+   ip-172-31-35-170 ⟵ Tunnel                                              
+   ip-172-31-41-144 127.0.0.1:3022 env=example, hostname=ip-172-31-41-144 
    ```
 
 4. `tele-admin` can SSH into the *Bastion Host* Node by running the following command locally:
 
-   ```bash
+   ```code
    # Use tsh to ssh into a Node
-   tsh ssh root@ip-172-31-41-144
+   $ tsh ssh root@ip-172-31-41-144
    ```
 
    Now, they can:
@@ -258,13 +257,13 @@ We can use `tsh` to SSH into the cluster:
 
 <Tabs>
   <TabItem label="tsh">
-    ```bash
-    tsh ssh root@ip-172-31-41-144
+    ```code
+    $ tsh ssh root@ip-172-31-41-144
     ```
   </TabItem>
   <TabItem label="ssh">
-    ```bash
-    ssh -J tele.example.com root@ip-172-31-41-144
+    ```code
+    $ ssh -J tele.example.com root@ip-172-31-41-144
     ```
   </TabItem>
 </Tabs>
@@ -278,25 +277,25 @@ We can use `tsh` to SSH into the cluster:
 
 2. Execute the following command within your *Bastion Host* console:
 
-   ```bash
+   ```code
    # List Nodes
-   sudo tctl nodes ls
+   $ sudo tctl nodes ls
    ```
 
-   It displays the unified resource catalog with all queried resources in one view:
-
-   ```bash
-   Nodename         UUID                                 Address        Labels
-   ---------------- ------------------------------------ -------------- -------------------------------------
-   ip-172-31-35-170 4980899c-d260-414f-9aea-874feef71747
-   ip-172-31-41-144 f3d2a65f-3fa7-451d-b516-68d189ff9ae5 127.0.0.1:3022 env=example,hostname=ip-172-31-41-144
+   It displays the unified resource catalog with all queried resources in one view: 
+   
+   ```txt
+   Nodename         UUID                                 Address        Labels                                
+   ---------------- ------------------------------------ -------------- ------------------------------------- 
+   ip-172-31-35-170 4980899c-d260-414f-9aea-874feef71747                                                      
+   ip-172-31-41-144 f3d2a65f-3fa7-451d-b516-68d189ff9ae5 127.0.0.1:3022 env=example,hostname=ip-172-31-41-144                            
    ```
 
 3. Note the "Labels" column on the farthest side. `tele-admin` can query all resources with a shared [label](../admin-guide.mdx#labeling-nodes-and-applications) using the command:
 
-   ```bash
+   ```code
    # Query all Nodes with a label
-   tsh ls env=example
+   $ tsh ls env=example
    ```
 
    - Customized labels can be defined in your `teleport.yaml` configuration file or during Node creation.
@@ -305,10 +304,10 @@ We can use `tsh` to SSH into the cluster:
 
 4. `tele-admin` can also execute commands on all Nodes that share a label vastly simplifying repeated operations. For example, the command:
 
-   ```bash
+   ```code
    # Run the ls command on all Nodes with a label
-   tsh ssh root@env=example ls
-   ```
+   $ tsh ssh root@env=example ls
+   ``` 
 
    will execute the `ls` command on each Node displaying the contents of each to the screen.
 
